# Cloudrary

./: .gitignore  CMakeLists.txt  Cloudrary.qrc  data.json  format.sh  readme.md
QML/: App.qml  Main.qml
QML/Global/: ItemsFooter.qml  ItemsOriginal.qml  MainEvent.qml  qmldir
QML/page/: Books.qml  Collections.qml  Home.qml  Settings.qml
QML/window/: MainWindow.qml
book/: People_in_danger.txt
include/: base.h  download.h
src/: AppInfo.cpp  Base.cpp  Book.cpp  BookList.cpp  ISSUE  Library.cpp  TODO  download.cpp  main.cpp  runT.cpp  test.cpp
src/include/: base.h
src/lang/: En.cpp  Lang.h  Zh.cpp
